fix: prevent command injection in executeUserCommand
Co-authored-by: kalangun <111726154+kalangun@users.noreply.github.com>